--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/caleb/IdeaProjects/External Lib/spigot-1.12.2.jar"/>
 	<classpathentry kind="con" path="com.google.cloud.tools.eclipse.appengine.libraries/master-container">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
@@ -17,5 +16,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/caleb/Desktop/workspace/Dependencies/spigot-1.12.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
