--- a/pom.xml
+++ b/pom.xml
@@ -5,35 +5,28 @@
 	<artifactId>tpp</artifactId>
 	<version>1.0</version>
 	<name>McTranslate++</name>
-
+	<repositories>
+		<repository>
+			<id>spigot-repo</id>
+			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>com.google.cloud</groupId>
 			<artifactId>google-cloud-translate</artifactId>
 			<version>1.14.0</version>
 		</dependency>
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
 		<dependency>
-		<groupId>com.google.apis</groupId>
-		<artifactId>google-api-services-cloudresourcemanager</artifactId>
-		<version>v1-rev461-1.23.0</version>
-	</dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-cloudresourcemanager</artifactId>
+			<version>v1-rev461-1.23.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>spigot-api</artifactId>
+			<version>1.13-R0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
