--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 	<build>
 		<resources>
 			<resource>
-				<directory>src</directory>
+				<directory>src/main/java</directory>
 				<includes>
 					<include>plugin.yml</include>
 					<include>config.yml</include>
